--- a/business/templates/businessCreditBuilding/BusinessCreditSteps.html
+++ b/business/templates/businessCreditBuilding/BusinessCreditSteps.html
@@ -69,15 +69,15 @@
                                                 Quantity: <input class="quantity_input" value="1" type="number" min="1"
                                                                  name="toll_free_number_quantity" id="toll_free_number_quantity">
                                             </div>
-{#                                            <select class="custom-select mb-2" name="toll_free_number_prefix">#}
-{#                                                <option value="888 (Toll Free Prefix)">888 (Toll Free Prefix)</option>#}
-{#                                                <option value="877 (Toll Free Prefix)">877 (Toll Free Prefix)</option>#}
-{#                                                <option value="866 (Toll Free Prefix)">866 (Toll Free Prefix)</option>#}
-{#                                                <option value="855 (Toll Free Prefix)">855 (Toll Free Prefix)</option>#}
-{#                                                <option value="844 (Toll Free Prefix)">844 (Toll Free Prefix)</option>#}
-{#                                                <option value="833 (Toll Free Prefix)">833 (Toll Free Prefix)</option>#}
-{#                                                <option value="800 (Toll Free Prefix)">800 (Toll Free Prefix)</option>#}
-{#                                            </select>#}
+                                            <select class="custom-select mb-2" name="toll_free_number_prefix">
+                                                <option value="888 (Toll Free Prefix)">888 (Toll Free Prefix)</option>
+                                                <option value="877 (Toll Free Prefix)">877 (Toll Free Prefix)</option>
+                                                <option value="866 (Toll Free Prefix)">866 (Toll Free Prefix)</option>
+                                                <option value="855 (Toll Free Prefix)">855 (Toll Free Prefix)</option>
+                                                <option value="844 (Toll Free Prefix)">844 (Toll Free Prefix)</option>
+                                                <option value="833 (Toll Free Prefix)">833 (Toll Free Prefix)</option>
+                                                <option value="800 (Toll Free Prefix)">800 (Toll Free Prefix)</option>
+                                            </select>
                                         </div>
                                         <div>
                                             <input type="checkbox" name="fax_number" id="fax_number">
@@ -88,15 +88,15 @@
                                                 Quantity: <input class="quantity_input" value="1" type="number" min="1"
                                                                  name="fax_number_quantity" id="fax_number_quantity" >
                                             </div>
-{#                                            <select class="custom-select mb-2" name="fax_number_prefix">#}
-{#                                                <option value="888 (Toll Free Prefix)">888 (Toll Free Prefix)</option>#}
-{#                                                <option value="877 (Toll Free Prefix)">877 (Toll Free Prefix)</option>#}
-{#                                                <option value="866 (Toll Free Prefix)">866 (Toll Free Prefix)</option>#}
-{#                                                <option value="855 (Toll Free Prefix)">855 (Toll Free Prefix)</option>#}
-{#                                                <option value="844 (Toll Free Prefix)">844 (Toll Free Prefix)</option>#}
-{#                                                <option value="833 (Toll Free Prefix)">833 (Toll Free Prefix)</option>#}
-{#                                                <option value="800 (Toll Free Prefix)">800 (Toll Free Prefix)</option>#}
-{#                                            </select>#}
+                                            <select class="custom-select mb-2" name="fax_number_prefix">
+                                                <option value="888 (Toll Free Prefix)">888 (Toll Free Prefix)</option>
+                                                <option value="877 (Toll Free Prefix)">877 (Toll Free Prefix)</option>
+                                                <option value="866 (Toll Free Prefix)">866 (Toll Free Prefix)</option>
+                                                <option value="855 (Toll Free Prefix)">855 (Toll Free Prefix)</option>
+                                                <option value="844 (Toll Free Prefix)">844 (Toll Free Prefix)</option>
+                                                <option value="833 (Toll Free Prefix)">833 (Toll Free Prefix)</option>
+                                                <option value="800 (Toll Free Prefix)">800 (Toll Free Prefix)</option>
+                                            </select>
                                         </div>
                                         <div>
                                             <input type="checkbox" name="domain" id="domain">
@@ -169,10 +169,11 @@
                                         <div class="mb-2" style="font-size: 12px">
 
                                             &#8226; 60 days free on our accounting and payroll software <br>
+                                            &#8226; 60 days free on our customer relationship management software <br>
                                             &#8226; 10% off our special auto dialer software that can do sms texting and
                                             voice broadcasting to grow your business for 60 days<br>
-{#                                            &#8226; Free Access to our data platform that helps you get and export#}
-{#                                            100,000 leads for 60 days<br>#}
+                                            &#8226; Free Access to our data platform that helps you get and export
+                                            100,000 leads for 60 days<br>
                                             <a href="#">Watch video to explain bonuses</a>
                                         </div>
                                         <div class="text-center mb-2 font-weight-bold">
@@ -205,15 +206,15 @@
                                                 Quantity: <input class="quantity_input" value="1" type="number" min="1"
                                                                  name="toll_free_number_year_quantity" id="toll_free_number_year_quantity">
                                             </div>
-{#                                            <select class="custom-select mb-2" name="toll_free_number_year_prefix">#}
-{#                                                <option value="888 (Toll Free Prefix)">888 (Toll Free Prefix)</option>#}
-{#                                                <option value="877 (Toll Free Prefix)">877 (Toll Free Prefix)</option>#}
-{#                                                <option value="866 (Toll Free Prefix)">866 (Toll Free Prefix)</option>#}
-{#                                                <option value="855 (Toll Free Prefix)">855 (Toll Free Prefix)</option>#}
-{#                                                <option value="844 (Toll Free Prefix)">844 (Toll Free Prefix)</option>#}
-{#                                                <option value="833 (Toll Free Prefix)">833 (Toll Free Prefix)</option>#}
-{#                                                <option value="800 (Toll Free Prefix)">800 (Toll Free Prefix)</option>#}
-{#                                            </select>#}
+                                            <select class="custom-select mb-2" name="toll_free_number_year_prefix">
+                                                <option value="888 (Toll Free Prefix)">888 (Toll Free Prefix)</option>
+                                                <option value="877 (Toll Free Prefix)">877 (Toll Free Prefix)</option>
+                                                <option value="866 (Toll Free Prefix)">866 (Toll Free Prefix)</option>
+                                                <option value="855 (Toll Free Prefix)">855 (Toll Free Prefix)</option>
+                                                <option value="844 (Toll Free Prefix)">844 (Toll Free Prefix)</option>
+                                                <option value="833 (Toll Free Prefix)">833 (Toll Free Prefix)</option>
+                                                <option value="800 (Toll Free Prefix)">800 (Toll Free Prefix)</option>
+                                            </select>
                                         </div>
 
 
@@ -226,15 +227,15 @@
                                                 Quantity: <input class="quantity_input" value="1" type="number" min="1"
                                                                  name="fax_number_year_quantity" id="fax_number_year_quantity">
                                             </div>
-{#                                            <select class="custom-select mb-2" name="fax_number_year_prefix">#}
-{#                                                <option value="888 (Toll Free Prefix)">888 (Toll Free Prefix)</option>#}
-{#                                                <option value="877 (Toll Free Prefix)">877 (Toll Free Prefix)</option>#}
-{#                                                <option value="866 (Toll Free Prefix)">866 (Toll Free Prefix)</option>#}
-{#                                                <option value="855 (Toll Free Prefix)">855 (Toll Free Prefix)</option>#}
-{#                                                <option value="844 (Toll Free Prefix)">844 (Toll Free Prefix)</option>#}
-{#                                                <option value="833 (Toll Free Prefix)">833 (Toll Free Prefix)</option>#}
-{#                                                <option value="800 (Toll Free Prefix)">800 (Toll Free Prefix)</option>#}
-{#                                            </select>#}
+                                            <select class="custom-select mb-2" name="fax_number_year_prefix">
+                                                <option value="888 (Toll Free Prefix)">888 (Toll Free Prefix)</option>
+                                                <option value="877 (Toll Free Prefix)">877 (Toll Free Prefix)</option>
+                                                <option value="866 (Toll Free Prefix)">866 (Toll Free Prefix)</option>
+                                                <option value="855 (Toll Free Prefix)">855 (Toll Free Prefix)</option>
+                                                <option value="844 (Toll Free Prefix)">844 (Toll Free Prefix)</option>
+                                                <option value="833 (Toll Free Prefix)">833 (Toll Free Prefix)</option>
+                                                <option value="800 (Toll Free Prefix)">800 (Toll Free Prefix)</option>
+                                            </select>
                                         </div>
                                         <div>
                                             <input type="checkbox" name="domain_year" id="domain_year">
@@ -307,11 +308,12 @@
 
 
                                             &#8226; 1 year free on our accounting and payroll software<br>
+                                            &#8226; 1 year free on our customer relationship management software<br>
                                             &#8226; 50% off our special auto dialer software that can do sms texting and
                                             voice
-                                            broadcasting to grow your business for 60 days<br>
-{#                                            &#8226; Free Access to our data platform that helps you get and export#}
-{#                                            100,000 leads for 120 days<br>#}
+                                            broadcasting to grow your business for the entire year<br>
+                                            &#8226; Free Access to our data platform that helps you get and export
+                                            100,000 leads for 120 days<br>
                                             <a href="#">Watch video to explain bonuses</a>
 
                                         </div>
