--- a/business/templates/businessCreditBuilding/BusinessCreditSteps.html
+++ b/business/templates/businessCreditBuilding/BusinessCreditSteps.html
@@ -174,7 +174,7 @@
                                             voice broadcasting to grow your business for 60 days<br>
                                             &#8226; Free Access to our data platform that helps you get and export
                                             100,000 leads for 60 days<br>
-                                            <a href="#">Watch video to explain bonuses</a>
+                                            <a href="https://www.youtube.com/watch?v=aLkzggxIWxk&feature=youtu.be" target="_blank">Watch video to explain bonuses</a>
                                         </div>
                                         <div class="text-center mb-2 font-weight-bold">
                                             Need All The Steps? Get The Business Builder Monthly Program for $109.99
@@ -314,7 +314,7 @@
                                             broadcasting to grow your business for the entire year<br>
                                             &#8226; Free Access to our data platform that helps you get and export
                                             100,000 leads for 120 days<br>
-                                            <a href="#">Watch video to explain bonuses</a>
+                                            <a href="https://www.youtube.com/watch?v=aLkzggxIWxk&feature=youtu.be" target="_blank">Watch video to explain bonuses</a>
 
                                         </div>
                                         <div class="text-center mb-2 font-weight-bold">
