--- a/business/templates/customerFinancing.html
+++ b/business/templates/customerFinancing.html
@@ -37,7 +37,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <img src="https://www.getdinerotoday.com/assets/img/viabill.jpg" height="270px" width="100%"
+                    <img src="https://www.getdinerotoday.com/static/assets/img/viabill.jpg" height="270px" width="100%"
                          alt="">
                     <div class="card-body">
                         <p class="card-text">Click The Button Below To Offer Viabill To Your Customers</p>
@@ -52,7 +52,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <img src="https://www.getdinerotoday.com/assets/img/klarna-og.jpg" height="270px"
+                    <img src="https://www.getdinerotoday.com/static/assets/img/klarna-og.jpg" height="270px"
                          width="100%" alt="">
                     <div class="card-body">
                         <p class="card-text">Click The Button Below To Offer Klarna To Your Customers</p>
@@ -67,7 +67,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <img src="https://www.getdinerotoday.com/assets/img/quadpay.jpg" height="270px" width="100%"
+                    <img src="https://www.getdinerotoday.com/static/assets/img/quadpay.jpg" height="270px" width="100%"
                          alt="">
                     <div class="card-body">
                         <p class="card-text">Click The Button Below To Offer Quadpay To Your Customers</p>
@@ -85,7 +85,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <img src="https://www.getdinerotoday.com/assets/img/sezzle.jpg" height="270px" width="100%"
+                    <img src="https://www.getdinerotoday.com/static/assets/img/sezzle.jpg" height="270px" width="100%"
                          alt="">
                     <div class="card-body">
                         <p class="card-text">Click The Button Below To Offer Sezzle To Your Customers</p>
@@ -100,7 +100,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <img src="https://www.getdinerotoday.com/assets/img/fundbox.jpeg" height="270px"
+                    <img src="https://www.getdinerotoday.com/static/assets/img/fundbox.jpeg" height="270px"
                          width="100%" alt="">
                     <div class="card-body">
                         <p class="card-text">Click The Button Below To Offer Fundbox Pay To Your Customers</p>
@@ -115,7 +115,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <img src="https://www.getdinerotoday.com/assets/img/paypal.png" height="270px" width="100%"
+                    <img src="https://www.getdinerotoday.com/static/assets/img/paypal.png" height="270px" width="100%"
                          alt="">
                     <div class="card-body">
                         <p class="card-text">Click The Button Below To Offer Paypal Line Of Credit To Your Customer</p>
@@ -134,7 +134,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <img src="https://www.getdinerotoday.com/assets/img/behalf.jpeg" height="270px" width="100%"
+                    <img src="https://www.getdinerotoday.com/static/assets/img/behalf.jpeg" height="270px" width="100%"
                          alt="">
                     <div class="card-body">
                         <p class="card-text">Click The Button Below To Offer Behalf Line Of Credit To Your Customers</p>
