--- a/loanportal/templates/loanapplication.html
+++ b/loanportal/templates/loanapplication.html
@@ -39,7 +39,7 @@
         <div class="row" style="justify-content: space-around">
             <div class="col-md-5">
                 <div class="card">
-                    <img src="https://millennialbusinessbuilders.com/images/drivers.png" class="card-img-top"
+                    <img src="https://www.getdinerotoday.com/static/images/drivers.png" class="card-img-top"
                          width="100%" height="250px">
                     <div class="card-body" align="center">
                         <h5 class="card-title">Upload Your Drivers License Or Government-Issued Photo ID</h5>
@@ -64,7 +64,7 @@
             </div>
             <div class="col-md-5">
                 <div class="card">
-                    <img src="https://millennialbusinessbuilders.com/images/socialcard.png" class="card-img-top"
+                    <img src="https://www.getdinerotoday.com/static/images/socialcard.png" class="card-img-top"
                          width="100%" height="250px">
                     <div class="card-body" align="center"><h5 class="card-title">Upload Your Social Security Card</h5>
                         <form action="/loanportal/loanapplication" accept-charset="UTF-8"
@@ -92,7 +92,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://millennialbusinessbuilders.com/images/3month.png" class="card-img-top"
+                    <img src="https://www.getdinerotoday.com/static/images/3month.png" class="card-img-top"
                          width="100%" height="250px">
                     <div class="card-body" align="center"><h5 class="card-title">Upload Your Last 3 Months Of Bank
                         Statements Click To Call Loan
@@ -117,7 +117,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://millennialbusinessbuilders.com/images/6month.png" class="card-img-top"
+                    <img src="https://www.getdinerotoday.com/static/images/6month.png" class="card-img-top"
                          width="100%" height="250px">
                     <div class="card-body" align="center"><h5 class="card-title">Upload Your Last 6 Months Of Bank
                         Statements Click To Call Loan
@@ -142,7 +142,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://millennialbusinessbuilders.com/images/1yearbt.png" class="card-img-top"
+                    <img src="https://www.getdinerotoday.com/static/images/1yearbt.png" class="card-img-top"
                          width="100%" height="250px">
                     <div class="card-body" align="center"><h5 class="card-title">Upload Your Last Year Of Business Tax
                         Returns Click To Call Loan
@@ -170,7 +170,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://millennialbusinessbuilders.com/images/2yearbt.png" class="card-img-top"
+                    <img src="https://www.getdinerotoday.com/static/images/2yearbt.png" class="card-img-top"
                          width="100%" height="250px">
                     <div class="card-body" align="center"><h5 class="card-title">Upload Your Last 2 Years Of Business
                         Tax Returns Click To Call Loan
@@ -195,7 +195,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://millennialbusinessbuilders.com/images/1yearpt.png" class="card-img-top"
+                    <img src="https://www.getdinerotoday.com/static/images/1yearpt.png" class="card-img-top"
                          width="100%" height="250px">
                     <div class="card-body" align="center"><h5 class="card-title">Upload Your Last Year Of Personal Tax
                         Returns Click To Call Loan
@@ -220,7 +220,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://millennialbusinessbuilders.com/images/2yearspt.png" class="card-img-top"
+                    <img src="https://www.getdinerotoday.com/static/images/2yearspt.png" class="card-img-top"
                          width="100%" height="250px">
                     <div class="card-body" align="center"><h5 class="card-title">Upload Your Last Two Years Of Personal
                         Tax Returns Click To Call Loan
