--- a/whitelabelpartnerportal/templates/buywhitelabelwebsite.html
+++ b/whitelabelpartnerportal/templates/buywhitelabelwebsite.html
@@ -36,7 +36,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="card mb-4 shadow-sm">
-                    <img src="https://millennialbusinessbuilders.com/assets/img/website1.png" height="300px" alt="">
+                    <img src="https://www.getdinerotoday.com/static/assets/img/website1.png" height="300px" alt="">
                     <div class="card-body">
                         <p class="card-text">Watch The Video Above To See How To Purchase Your White Label Website With
                             Only Payinh 25% Down At 0% Interest</p>
@@ -53,12 +53,12 @@
             </div>
             <div class="col-md-6">
                 <div class="card mb-4 shadow-sm">
-                    <img src="https://millennialbusinessbuilders.com/assets/img/website2.png" height="300px" alt="">
+                    <img src="https://www.getdinerotoday.com/static/assets/img/website2.png" height="300px" alt="">
                     <div class="card-body">
                         <p class="card-text">White Label Website Preview</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="https://millennialbusinessbuilders.com/whitelabel/index.html" target="_blank">
+                                <a href="#" target="_blank">
                                     <button type="button" class="btn btn-sm btn-primary">Click Here To See White Label
                                         Website Preview
                                     </button>
