--- a/whitelabelpartnerportal/templates/whitelabelwebinar.html
+++ b/whitelabelpartnerportal/templates/whitelabelwebinar.html
@@ -36,7 +36,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <img src="https://millennialbusinessbuilders.com/assets/img/webinar4.png" height="300px" alt="">
+                    <img src="https://www.getdinerotoday.com/static/assets/img/webinar4.png" height="300px" alt="">
                     <div class="card-body">
                         <p class="card-text">Webinar With $1499 Offer</p>
                         <div class="d-flex justify-content-between align-items-center">
