--- a/getdinerotoday/templates/landingpages/components/Header.html
+++ b/getdinerotoday/templates/landingpages/components/Header.html
@@ -59,9 +59,9 @@
                     <!-- Navbar -->
                     <nav class="navbar navbar-expand-lg">
                         <a class="navbar-brand logo" href="/">
-                            <img id="logo-white-img" class="img-center" src="/static/images/logo-white.png"
+                            <img id="logo-white-img" class="img-center" src="{{ wl_logo }}"
                                  height="180px" alt="">
-                            <img id="logo-img" class="img-center sticky-logo" src="/static/images/logo-white.png"
+                            <img id="logo-img" class="img-center sticky-logo" src="{{ wl_logo }}"
                                  height="180px" alt="">
                         </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
