--- a/getdinerotoday/templates/components/TopBar.html
+++ b/getdinerotoday/templates/components/TopBar.html
@@ -19,7 +19,7 @@
             <div class="col">
                 <a href="/dashboard" class="admin-logo dark-logo">
                     <h1>
-                        <img src="{% static 'images/logo.png' %}" class="logo-icon margin-r-10">
+                        <img src="{{ wl_logo }}" class="logo-icon margin-r-10">
                     </h1>
                 </a>
                 <div class="left-nav-toggle">
