--- a/user/templates/userBase.html
+++ b/user/templates/userBase.html
@@ -222,7 +222,7 @@
     <div class="row justify-content-center">
         <div class="col-md-4 col-xs-12 widthClass">
             <div class="misc-header text-center">
-                <img class="toggle-none hidden-xs image" src="/static/images/logo.png"/>
+                <img class="toggle-none hidden-xs image" src="{{ wl_logo }}"/>
             </div>
             <div class="misc-box">
                 {% block content %}
