--- a/getdinerotoday/templates/components/Footer.html
+++ b/getdinerotoday/templates/components/Footer.html
@@ -1,3 +1,3 @@
 <footer class="footer">
-    <span>Copyright © {% now "Y" %} Get Dinero Today / Need Help? Give Us A Call At 877-726-2604</span>
+    <span>Copyright © {% now "Y" %} Get Dinero Today / Need Help? Give Us A Call At {{ phone_number }}</span>
 </footer>
