--- a/user/templates/userBase.html
+++ b/user/templates/userBase.html
@@ -14,7 +14,7 @@
         }
 
         .bgcolor {
-            background-image: -webkit-linear-gradient(-30deg, #177b3f, #07231b);
+            background-image: {{ LOGIN_BG_COLOR_CSS }};
             background-repeat: no-repeat;
             font-family: "Montserrat", sans-serif;
             color: #575962;
