--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -214,17 +214,19 @@
                     <a href="{% url 'chromeextension:chromeextensionindex' %}" class="nav-link"> Go To Chrome Extension Portal </a>
                 </li>
                 <li class="nav-item">
-                    {% for link in dynamic %}
-                    <a href={{link.iphoneApp}} target="_blank" class="nav-link"> Download Our Iphone App </a>
-                    {% endfor %}
+                    {% if dynamic.iphoneApp %}
+                    <a href={{dynamic.iphoneApp}} target="_blank" class="nav-link"> Download Our Iphone App </a>
+                    {% endif %}
                 </li>
                 <li class="nav-item">
-                    {% for link in dynamic %}
-                    <a href={{link.androidApp}} target="_blank" class="nav-link"> Download Our Android App </a>
-                    {% endfor %}
+                    {% if dynamic.androidApp %}
+                    <a href={{dynamic.androidApp}} target="_blank" class="nav-link"> Download Our Android App </a>
+                    {% endif %}
                 </li>
                 <li class="nav-item">
-                    <a href="https://chrome.google.com/webstore/detail/get-dinero-today/nopllamladnpdgmgcfbnhdfpllpgpcgk?hl=en" target="_blank" class="nav-link"> Download Our Google Chrome Extension </a>
+                    {% if dynamic.chromeExt %}
+                    <a href={{ dynamic.chromeExt }} target="_blank" class="nav-link"> Download Our Google Chrome Extension </a>
+                    {% endif %}
                 </li>
                 <br><br><br>
             </ul>
