making site dynamic

--- a/getdinerotoday/templates/landingpages/components/Header.html
+++ b/getdinerotoday/templates/landingpages/components/Header.html
@@ -102,8 +102,8 @@
                                         </li>
                                     </ul>
                                 </li> -->
-                                <li><a class="nav-link" href="https://getdinerotodayaffiliateprogram.tapfiliate.com/" target="_blank">Affiliate Program</a>
-                                </li>
+                                <!-- <li><a class="nav-link" href="https://getdinerotodayaffiliateprogram.tapfiliate.com/" target="_blank">Affiliate Program</a>
+                                </li> -->
                                 <li class="nav-item"><a class="nav-link" href="/contact">Contact Us</a>
                                 </li>
                                 <div class="client-loginshow">
