--- a/getdinerotoday/templates/landingpages/layout/LandingLayout.html
+++ b/getdinerotoday/templates/landingpages/layout/LandingLayout.html
@@ -9,7 +9,9 @@
     <meta name="description" content="HTML5 Template"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 
-    <title>Get Dinero Today </title>
+    {% for item in dynamic %}
+    <title>{{item.title}}</title>
+    {% endfor %}
     {% include "landingpages/components/StylesBlock.html" %}
     {% block extrastyle %}
     {% endblock extrastyle %}
