--- a/getdinerotoday/templates/components/Footer.html
+++ b/getdinerotoday/templates/components/Footer.html
@@ -1,3 +1,6 @@
 <footer class="footer">
-    <span>Copyright © {% now "Y" %} Get Dinero Today / Need Help? Give Us A Call At {{ phone_number }}</span>
+    {% for item in dynamic %}
+    <span>Copyright © {% now "Y" %} {{item.title}} / Need Help? Give Us A Call At {{ phone_number }}</span>
+    {% endfor %}
 </footer>
+
