--- a/getdinerotoday/templates/landingpages/components/Footer.html
+++ b/getdinerotoday/templates/landingpages/components/Footer.html
@@ -14,16 +14,19 @@
       <div class="row">
         <div class="col-lg-12 col-md-12 md-mt-5">
           <h4>Contact Us</h4>
+          {% for item in dynamic %}
           <ul class="media-icon list-unstyled">
             <li>
-              <p class="mb-0">Address: <b>1629 K St NW Suite 300, Washington, DC 20006</b>
+              
+              <p class="mb-0">Address: <b>{{item.address}}</b>
               </p>
             </li>
-            <li>Email: <a href="mailto:info@getdinerotoday.com"><b>info@getdinerotoday.com</b></a>
+            <li>Email: <a href="mailto:{{item.email}}"><b>{{item.email}}</b></a>
             </li>
-            <li>Phone: <a href="tel:8777262604"><b>877-726-2604</b></a>
+            <li>Phone: <a href="tel:{{item.phno}}"><b>{{item.phno}}</b></a>
             </li>
           </ul>
+          {% endfor %}
         </div>
       </div>
     </div>
@@ -32,7 +35,9 @@
     <div class="container-fluid">
       <div class="copyright">
         <div class="row align-items-center">
-          <div class="col-lg-6 col-md-12"> <span>Copyright 2020 Get Dinero Today  | All Rights Reserved</span>
+          {% for item in dynamic %}
+          <div class="col-lg-6 col-md-12"> <span>Copyright 2020 {{item.title}}  | All Rights Reserved</span>
+          {% endfor %}
           </div>
         </div>
       </div>
