--- a/getdinerotoday/templates/landingpages/components/StylesBlock.html
+++ b/getdinerotoday/templates/landingpages/components/StylesBlock.html
@@ -10,6 +10,7 @@
 <link href="/static/css/shortcodes.css" rel="stylesheet" type="text/css"/>
 <link href="/static/css/style.css" rel="stylesheet" type="text/css"/>
 <link href="/static/css/responsive.css" rel="stylesheet" type="text/css"/>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 <!--Start of Tawk.to Script-->
 <script>
