--- a/getdinerotoday/templates/landingpages/contact.html
+++ b/getdinerotoday/templates/landingpages/contact.html
@@ -52,7 +52,7 @@
   </div>
 </section>
 
-<section class="contact-info p-0 z-index-1">
+<!-- <section class="contact-info p-0 z-index-1">
   <div class="container">
     <div class="row align-items-center">
       <div class="col-lg-4 col-md-12">
@@ -70,9 +70,10 @@
       </div>
     </div>
   </div>
-</section>
 
-<section class="o-hidden p-0 custom-mt-10 z-index-0">
+</section> -->
+
+<!-- <section class="o-hidden p-0 custom-mt-10 z-index-0">
   <div class="container-fluid p-0">
     <div class="row align-items-center">
       <div class="col-md-12">
@@ -82,7 +83,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 <!--contact end-->
 
