updated single obj

--- a/getdinerotoday/templates/components/Footer.html
+++ b/getdinerotoday/templates/components/Footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
-    {% for item in dynamic %}
-    <span>Copyright © {% now "Y" %} {{item.title}} / Need Help? Give Us A Call At {{ phone_number }}</span>
-    {% endfor %}
+    
+    <span>Copyright © {% now "Y" %} {{dynamic.title}} / Need Help? Give Us A Call At {{ phone_number }}</span>
+    
 </footer>
 
