--- a/getdinerotoday/templates/landingpages/index.html
+++ b/getdinerotoday/templates/landingpages/index.html
@@ -36,10 +36,15 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-5 col-md-12 md-mt-5 ml-auto">
-                    {% for item in dynamic %}
+                    {% if dynamic %}                    
+                    <h1 class="mb-4 font-weight-normal wow fadeInUp" data-wow-duration="1.5s"                        
+                        style="visibility: visible; animation-duration: 1.5s; animation-name: fadeInUp;">{{dynamic.title}}</h1>
+                    {% else %}
                     <h1 class="mb-4 font-weight-normal wow fadeInUp" data-wow-duration="1.5s"
-                        style="visibility: visible; animation-duration: 1.5s; animation-name: fadeInUp;">{{item.title}}</h1>
-                    {% endfor %}
+                    style="visibility: visible; animation-duration: 1.5s; animation-name: fadeInUp;">Get
+                    Dinero<span
+                            class="font-weight-bold text-uppercase"><br>Today</span></h1>
+                    {% endif %}
                     <p class="lead mb-4 wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.3s"
                        style="visibility: visible; animation-duration: 2s; animation-delay: 0.3s; animation-name: fadeInUp;">
                         We Help Businesses Acquire Business Credit With Our Free Software, Mobile App, & Google Chrome Extension. Also,
@@ -128,10 +133,13 @@ display: none;
                             <i class="la la-info"></i>
                         </div>
                         <h4>Download Our Free Iphone & Android App</h4>
-                        {% for link in dynamic %}
-                        <a href={{link.iphoneApp}} target="_blank" class="btn btn-theme btn-circle">Click Here To Download On Iphone Store</a> <br> <br>
+                        {% if dynamic %}
+                        <a href={{dynamic.iphoneApp}} target="_blank" class="btn btn-theme btn-circle">Click Here To Download On Iphone Store</a> <br> <br>
                             <a href="https://play.google.com/store/apps/details?id=com.millennialbusinessbuilders.getdianotoday" target="_blank" class="btn btn-theme btn-circle">Click Here To Download On Google Play Store</a>
-                        {% endfor %}
+                        {% else %}
+                        <a href="https://apps.apple.com/us/app/get-dinero-today/id1520722061" target="_blank" class="btn btn-theme btn-circle">Click Here To Download On Iphone Store</a> <br> <br>
+                        <a href="https://play.google.com/store/apps/details?id=com.millennialbusinessbuilders.getdianotoday" target="_blank" class="btn btn-theme btn-circle">Click Here To Download On Google Play Store</a>
+                        {% endif %}
                         </div>
                 </div>
             </div>
@@ -807,10 +815,13 @@ display: none;
                                 </ul>
                                 <br>
                                 <div class="col-md-12 mt-2">
-                                    {% for item in dynamic %}
-                                    <a href="https://www.{{item.sub_name}}.getdinerotoday.com/user/login/" target="_blank" class="btn btn-theme btn-circle">Sign Up For Forever Free
+                                    {% if dynamic %}
+                                    <a href="https://www.{{dynamic.sub_name}}.getdinerotoday.com/user/login/" target="_blank" class="btn btn-theme btn-circle">Sign Up For Forever Free
                                         Package</a>
-                                    {% endfor %}
+                                    {% else %}
+                                    <a href="https://www.getdinerotoday.com/user/login/" target="_blank" class="btn btn-theme btn-circle">Sign Up For Forever Free
+                                        Package</a>
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
