--- a/getdinerotoday/templates/landingpages/pricing.html
+++ b/getdinerotoday/templates/landingpages/pricing.html
@@ -54,7 +54,7 @@
                         <div class="ellipse"></div>
                         <i class="la la-money"></i>
                     </div>
-                    <h2 class="title">Our Different Payment Options</h2>
+                    <h2 class="title">Payment Options</h2>
                 </div>
             </div>
         </div>
@@ -84,8 +84,13 @@
                             </ul>
                             <br>
                             <div class="col-md-12 mt-2">
-                                <a href="https://www.getdinerotoday.com/user/login/" target="_blank" class="btn btn-theme btn-circle">Sign Up For Forever Free
-                                    Package</a>
+                              {% if dynamic %}
+                              <a href="https://www.{{dynamic.sub_name}}.getdinerotoday.com/user/login/" target="_blank" class="btn btn-theme btn-circle">Sign Up For Forever Free
+                                  Package</a>
+                              {% else %}
+                              <a href="https://www.getdinerotoday.com/user/login/" target="_blank" class="btn btn-theme btn-circle">Sign Up For Forever Free
+                                  Package</a>
+                              {% endif %}
                             </div>
                         </div>
                     </div>
